--- a/client/src/components/CalendarGrid.css
+++ b/client/src/components/CalendarGrid.css
@@ -15,18 +15,35 @@ abbr[title] {
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
   background: #eaeaea;
-  border-radius: 6px;
 }
 
 /* Unselected dates */
 .react-calendar__tile {
   background: transparent; /* Transparent for unselected dates */
   color: #222; /* Font color remains unchanged (black) */
+  height: 34px;
+  padding: 2px;
+  display: block;
+}
+
+.react-calendar__tile abbr {
+  display: block;
+  z-index: 1;
+  position: relative;
+  top: 8px;
+}
+
+.react-calendar__tile span {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: relative;
+  top: -18px;
+  z-index: 0;
 }
 
 /* Selected date with dynamic inline style */
 .react-calendar__tile--active {
-  border-radius: 6px;
   font-weight: bold;
   color: #222; /* Font color remains black */
 }
